--- a/final.ipynb
+++ b/final.ipynb
@@ -50,7 +50,7 @@
     "from torchvision import transforms, utils\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from skimage import io, transform\n",
+    "from skimage import io\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -59,11 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import re\n",
     "\n",
     "# Suppose you are trying to load pre-trained resnet model in directory- models\\resnet\n",
     "\n",
@@ -76,38 +77,149 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Bikeridedataset(Dataset):\n",
-    "    \"\"\"Face Landmarks dataset.\"\"\"\n",
+    "import json\n",
+    "import os\n",
+    "from collections import namedtuple\n",
+    "import zipfile\n",
     "\n",
-    "    def __init__(self, csv_file, root_dir, transform=None):\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "class CityscapeDataset(Dataset):\n",
+    "    \"\"\"`Cityscapes <http://www.cityscapes-dataset.com/>`_ Dataset.\n",
+    "\n",
+    "    Args:\n",
+    "        root (string): Root directory of dataset where directory ``leftImg8bit``\n",
+    "            \n",
+    "        split (string, optional): The image split to use, ``train``, ``train_extra`` or ``val``\n",
+    "       \n",
+    "        transform (callable, optional): A function/transform that takes in a PIL image\n",
+    "            and returns a transformed version. E.g, ``transforms.RandomCrop``  \n",
+    "        transforms (callable, optional): A function/transform that takes input sample and its target as entry\n",
+    "            and returns a transformed version.\n",
+    "\n",
+    "    Examples:\n",
+    "\n",
+    "      \n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Based on https://github.com/mcordts/cityscapesScripts\n",
+    "  \n",
+    "\n",
+    "    def __init__(self, root, split='train_extra', transforms=None):\n",
+    "        super(Cityscapes, self).__init__(root, transforms, transform)\n",
+    "        self.images_dir = os.path.join(self.root, 'leftImg8bit', split)\n",
+    "        self.split = split\n",
+    "        self.images = []\n",
+    "        self.targets = []\n",
+    "\n",
+    "        \n",
+    "        valid_modes = (\"train\", \"train_extra\", \"val\")\n",
+    "\n",
+    "        \n",
+    "        for city in os.listdir(images_dir):\n",
+    "            img_dir = os.path.join(images_dir, city)\n",
+    "            images_city=[]\n",
+    "            for file_name in os.listdir(img_dir):\n",
+    "                \n",
+    "                images_city.append(os.path.join(img_dir, file_name))\n",
+    "            # re.split(\\d+,input) splits by integer value\n",
+    "            images_city.sort( key= lambda text: int(re.split('(\\d+)',text)[3]+re.split('(\\d+)',text) [5] ))\n",
+    "            images.append(images_city)\n",
+    "                \n",
+    "[docs]    def __getitem__(self, index):\n",
     "        \"\"\"\n",
     "        Args:\n",
-    "            csv_file (string): Path to the csv file with annotations.\n",
-    "            root_dir (string): Directory with all the images.\n",
-    "            transform (callable, optional): Optional transform to be applied\n",
-    "                on a sample.\n",
+    "            index (int): Index\n",
+    "        Returns:\n",
+    "             image \n",
     "        \"\"\"\n",
-    "        self.landmarks_frame = pd.read_csv(csv_file)\n",
-    "        self.root_dir = root_dir\n",
-    "        self.transform = transform\n",
+    "\n",
+    "        image = Image.open(self.images[index]).convert('RGB')\n",
+    "        if self.transforms is not None:\n",
+    "            image = self.transforms(image)\n",
+    "\n",
+    "        return image\n",
+    "\n",
     "\n",
     "    def __len__(self):\n",
-    "        return len(self.landmarks_frame)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        if torch.is_tensor(idx):\n",
-    "            idx = idx.tolist()\n",
-    "\n",
-    "        img_name = os.path.join(self.root_dir,\n",
-    "                                self.landmarks_frame.iloc[idx, 0])\n",
-    "        image = io.imread(img_name)\n",
-    "        \n",
-    "\n",
-    "        if self.transform:\n",
-    "            sample = self.transform()\n",
-    "\n",
-    "        return sample"
+    "        return len(self.images)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = transforms.Resize((224, 224))\n",
+    "normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                                 std=[0.229, 0.224, 0.225])\n",
+    "to_tensor = transforms.ToTensor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "composed_transforms=transforms.Compose([transforms.Resize((224, 224)),                              transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                                 std=[0.229, 0.224, 0.225]),                                        transforms.ToTensor()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader = DataLoader(transformed_dataset, batch_size=4,\n",
+    "                        shuffle=True, num_workers=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
